Portafolio ML: README

--- a/.env
+++ b/.env
@@ -37,6 +37,11 @@ USE_MAKER=1
 MAKER_FEE_PCT=0.0002
 TAKER_FEE_PCT=0.0007
 SLIPPAGE_PCT=0.0001
+COMMISSION_RATE=0.0002
+SPREAD_PCT=0.00005
+SLIPPAGE_BASE=0.0001
+MAKER_FEE_BPS=2.0
+SLIPPAGE_BPS=1.0
 SPREAD_MIN_BPS=0
 STRESS_COST_BPS=0
 
@@ -122,4 +127,3 @@ MODEL_NAME=btc15m_xgb_calibrated_h3
 TP_BPS=28
 SL_BPS=14
 TIMEOUT_BARS=3
-
